# 2048game

./: CMakeLists.txt  main.cpp
gui/: qgameboard.cpp
realization/: board.cpp  board.h  game.cpp  game.h  observer.cpp  subject.cpp  tile.cpp
ui/: mainwindow.cpp  mainwindow.h  qgameboard.cpp  qgameboard.h  qresetbutton.cpp  qtile.cpp
